--- a/package.json
+++ b/package.json
@@ -21,23 +21,26 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@sanity/client": "^7.11.2",
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
-    "@sanity/vision": "^4.8.1",
+    "@sanity/vision": "^4.10.2",
     "@tailwindcss/typography": "^0.5.19",
+    "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.543.0",
-    "motion": "^12.23.12",
+    "motion": "^12.23.22",
     "next": "15.5.2",
-    "next-sanity": "^10.1.4",
+    "next-sanity": "^11.4.2",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-floating-whatsapp": "^5.0.8",
     "react-multi-carousel": "^2.8.6",
-    "sanity": "^4.8.1",
+    "sanity": "^4.10.2",
     "sonner": "^2.0.7",
     "styled-components": "^6.1.19",
     "swr": "^1.3.0",
